crates/arrow-quiver/tests/compile_fail/generics.stderr
error: #[derive(Quiver)] does not support generics
 --> tests/compile_fail/generics.rs:4:13
  |
4 | struct Thing<T> {
  |             ^^^
